frontend/test/should_fail/redirect_001.grg
rule r {
	x:Node -e:Edge-> y:Node;
	z:Node;

	modify {
		y !-e->! x;
		z !-e->! z;
	}
}

